--- a/index.html
+++ b/index.html
@@ -4,9 +4,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
     <title>Rebecca Varley Project 1 Blog</title>
 </head>
 <body>
-    
+    <div class="container">
+        <header>
+            <div class="header-container">Header</div>
+        </header>
+        <nav>
+            Nav
+            </nav>
+            <aside>
+
+            </aside>
+            <content>
+
+            </content>
+            <footer>
+                This is the footer
+            </footer>
+    </div>
 </body>
 </html>
