Update css styling

--- a/index.html
+++ b/index.html
@@ -1,29 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/style.css" />
     <title>Rebecca Varley Project 1 Blog</title>
-</head>
-<body>
+  </head>
+  <body>
     <div class="container">
-        <header>
-            <div class="header-container">Header</div>
-        </header>
-        <nav>
-            Nav
-            </nav>
-            <aside>
-
-            </aside>
-            <content>
-
-            </content>
-            <footer>
-                This is the footer
-            </footer>
+      <header>
+        <div class="header-container">
+          <img
+            src="images/Rebecca_Varley_Blog.png"
+            alt="Square header image with caramel background saying Rebecca Varley Blog"
+          />
+        </div>
+      </header>
+      <nav>
+        <div class="nav-container">Nav</div>
+      </nav>
+      <aside></aside>
+      <content> </content>
+      <footer>This is the footer</footer>
     </div>
-</body>
+  </body>
 </html>
