Change nav items to links

--- a/index.html
+++ b/index.html
@@ -18,7 +18,11 @@
         </div>
       </header>
       <nav>
-        <div class="nav-container">Nav</div>
+        <div class="nav-container">
+          <a href="index.html" class="navItem">Home</a>
+          <a href="About.html" class="navItem">About</a>
+          <a href="Contact.html" class="navItem">Contact</a>
+        </div>
       </nav>
       <aside></aside>
       <content> </content>
