--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,700;1,100;1,300;1,400;1,700&display=swap"
+      rel="stylesheet"
+    />
     <title>Rebecca Varley Project 1 Blog</title>
   </head>
   <body>
@@ -19,9 +25,11 @@
       </header>
       <nav>
         <div class="nav-container">
-          <a href="index.html" class="navItem">Home</a>
-          <a href="About.html" class="navItem">About</a>
-          <a href="Contact.html" class="navItem">Contact</a>
+          <div class="nav-list">
+            <a href="index.html" class="nav-item">Home</a>
+            <a href="About.html" class="nav-item">About</a>
+            <a href="Contact.html" class="nav-item">Contact</a>
+          </div>
         </div>
       </nav>
       <aside></aside>
