finsh blog post text

--- a/blog-post.html
+++ b/blog-post.html
@@ -85,6 +85,23 @@
               src="images/reynier-carl-kqZH-B7IX7o-unsplash.jpeg"
               alt="Reading the paper and enjoying breakfast on a cruise ship"
             />
+            <p>
+              As with every holiday experience it's best to go armed with
+              knowledge when you book. We suggest reading
+              <a href="https://www.cruisecritic.co.uk/" target="_blank"
+                >Cruise Critic</a
+              >
+              reviews to learn more about any ship or line you are considering
+              booking. Best of all, talk to friends who have cruised and enjoy
+              the same types of holidays as you do. Youtube has a wealth of
+              information about cruising and walkthroughs of every ship so you
+              can see what you are getitng before you book.
+            </p>
+            <p>
+              Of course, a great travel agent can also be invaluable. There's
+              nothing better than someone who knows the world of cruising and
+              can help you book the trip of your dreams.
+            </p>
           </div>
         </div>
       </content>
