update styling on homepage

--- a/index.html
+++ b/index.html
@@ -25,15 +25,19 @@
       </header>
       <nav>
         <div class="nav-container">
-          <div class="nav-list">
-            <a href="index.html" class="nav-item">Home</a>
-            <a href="About.html" class="nav-item">About</a>
-            <a href="Contact.html" class="nav-item">Contact</a>
-          </div>
+          <ul class="nav-list">
+            <li><a href="index.html" class="nav-item">Home</a></li>
+            <li><a href="About.html" class="nav-item">About</a></li>
+            <li><a href="Contact.html" class="nav-item">Contact</a></li>
+          </ul>
         </div>
       </nav>
-      <aside></aside>
-      <content> </content>
+      <content>
+        <div class="card">
+          <div class="left-card">Left</div>
+          <div class="right-card">Right</div>
+        </div>
+      </content>
       <footer>This is the footer</footer>
     </div>
   </body>
