--- a/index.html
+++ b/index.html
@@ -34,8 +34,14 @@
       </nav>
       <content>
         <div class="card">
-          <div class="left-card">Left</div>
-          <div class="right-card">Right</div>
+          <div class="inner-card">
+            <div class="left-card single-card">
+              <div class="title-box">
+                <h1 class="card-title">When Did Cruising Get So Cool?</h1>
+              </div>
+            </div>
+            <div class="right-card single-card">Right</div>
+          </div>
         </div>
       </content>
       <footer>This is the footer</footer>
