--- a/index.html
+++ b/index.html
@@ -32,17 +32,27 @@
           </ul>
         </div>
       </nav>
-      <content>
-        <div class="card">
-          <div class="inner-card">
-            <div class="left-card single-card">
-              <div class="title-box">
-                <h1 class="card-title">When Did Cruising Get So Cool?</h1>
+      <content class="content">
+        <section class="card">
+          <div class="left-card">
+            <a href="blog-post.html" class="card-link"
+              ><div class="card-title">
+                <h1>When Did Cruising Get So Cool?</h1>
               </div>
-            </div>
-            <div class="right-card single-card">Right</div>
+            </a>
           </div>
-        </div>
+          <div class="top-right right-card">
+            <p>
+              Once the poor relation of the holiday world and loved only by
+              those of retirement age, cruising has undergone a massive image
+              transformation in recent years.
+            </p>
+            <p>
+              What is it that makes modern cruises so much more appealing to the
+              younger generation, and could they be right for you?
+            </p></div>
+          </div>
+        </section>
       </content>
       <footer>This is the footer</footer>
     </div>
