Added the coming soon page

--- a/coming-soon.html
+++ b/coming-soon.html
@@ -32,40 +32,9 @@
           </ul>
         </div>
       </nav>
-      <content class="content">
-        <section class="card">
-          <div class="left-card">
-            <a href="blog-post.html" class="card-link"
-              ><div class="card-title">
-                <h1>When Did Cruising Get So Cool?</h1>
-              </div>
-            </a>
-          </div>
-          <div class="top-right right-card">
-            <p>
-              Once the poor relation of the holiday world and loved only by
-              those of retirement age, cruising has undergone a massive image
-              transformation in recent years.
-            </p>
-            <p>
-              What is it that makes modern cruises so much more appealing to the
-              younger generation, and could they be right for you?
-            </p></div>
-            <div class="bottom-right right-card">
-              <a href="blog-post.html"><button class="read-more">Read More</button></a>
-            </div>
-          </div>
-        </section>
-        <section class="multi-cards">
-          <div class="mini card">
-
-
-          </div>
-          <div class="mini card"></div>
-
-        </section>
-      </content>
-      <footer>This is the footer</footer>
+    </div>
+    <div class="about-content">
+      <h1>Page coming soon!</h1>
     </div>
   </body>
 </html>
