add mini blog cards to home page

--- a/index.html
+++ b/index.html
@@ -57,12 +57,16 @@
           </div>
         </section>
         <section class="multi-cards">
-          <div class="mini card">
-
-
+          <div class="mini-card">
+            <h3>World's Top 10 Beaches</h2>
+            <img class="mini-card-img" src="images/beach-unsplash.jpeg"/>
+            <div class="mini-card-btn"><a href="coming-soon.html"><button class="read-more">Read More</button></a></div>
           </div>
-          <div class="mini card"></div>
-
+          <div class="mini-card">
+            <h3>Best Honeymoon Destinations</h2>
+              <img class="mini-card-img" src="images/honeymoon-unsplash.jpeg"/>
+              <div class="mini-card-btn"><a href="coming-soon.html"><button class="read-more">Read More</button></a></div>
+          </div>
         </section>
       </content>
       <footer>This is the footer</footer>
