update footer and add to each page

--- a/coming-soon.html
+++ b/coming-soon.html
@@ -36,5 +36,8 @@
     <div class="about-content">
       <h1>Page coming soon!</h1>
     </div>
+    <footer class="footer">
+      <div></div>
+    </footer>
   </body>
 </html>
