--- a/contact.html
+++ b/contact.html
@@ -63,6 +63,9 @@
           </form>
         </section>
       </content>
+      <footer class="footer">
+        <div></div>
+      </footer>
     </div>
   </body>
 </html>
