--- a/index.html
+++ b/index.html
@@ -69,7 +69,10 @@
           </div>
         </section>
       </content>
-      <footer>This is the footer</footer>
+      <footer class="footer">
+        <div>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
