--- a/message.html
+++ b/message.html
@@ -1,1 +1,44 @@
-hi
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,700;1,100;1,300;1,400;1,700&display=swap"
+      rel="stylesheet"
+    />
+    <title>Rebecca Varley Project 1 Blog</title>
+  </head>
+  <body>
+    <div class="container">
+      <header>
+        <div class="header-container">
+          <img
+            src="images/Rebecca_Varley_Blog.png"
+            alt="Square header image with caramel background saying Rebecca Varley Blog"
+          />
+        </div>
+      </header>
+      <nav>
+        <div class="nav-container">
+          <ul class="nav-list">
+            <li><a href="index.html" class="nav-item">Home</a></li>
+            <li><a href="About.html" class="nav-item">About</a></li>
+            <li><a href="Contact.html" class="nav-item">Contact</a></li>
+          </ul>
+        </div>
+      </nav>
+    </div>
+    <div class="message">
+      <h1>Contact Form Submitted</h1>
+      <h2>We will get back to you within 48 hours</h2>
+    </div>
+    <footer class="footer">
+      <div></div>
+    </footer>
+  </body>
+</html>
