footer copyright message

--- a/index.html
+++ b/index.html
@@ -70,7 +70,8 @@
         </section>
       </content>
       <footer class="footer">
-        <div>
+        <div class="ft-btm">
+          <p>Design and build by Rebecca Varley &copy; 2022</p>
         </div>
       </footer>
     </div>
