Create author box

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
             </a>
           </div>
           <div class="top-right right-card">
+            <p class="category">Cruising</p>
             <p>
               Once the poor relation of the holiday world and loved only by
               those of retirement age, cruising has undergone a massive image
@@ -50,7 +51,9 @@
             <p>
               What is it that makes modern cruises so much more appealing to the
               younger generation, and could they be right for you?
-            </p></div>
+            </p>
+            <p class="author-name">Posted by: Rebecca Varley</p>
+          </div>
             <div class="bottom-right right-card">
               <a href="blog-post.html"><button class="read-more">Read More</button></a>
             </div>
@@ -58,11 +61,13 @@
         </section>
         <section class="multi-cards">
           <div class="mini-card">
+            <p class="category">Beach Holidays</p>
             <h3>World's Top 10 Beaches</h2>
             <img class="mini-card-img" src="images/beach-unsplash.jpeg"/>
             <div class="mini-card-btn"><a href="coming-soon.html"><button class="read-more">Read More</button></a></div>
           </div>
           <div class="mini-card">
+            <p class="category">Weddings</p>
             <h3>Best Honeymoon Destinations</h2>
               <img class="mini-card-img" src="images/honeymoon-unsplash.jpeg"/>
               <div class="mini-card-btn"><a href="coming-soon.html"><button class="read-more">Read More</button></a></div>
@@ -70,6 +75,22 @@
         </section>
       </content>
       <footer class="footer">
+        <div class="ft-left">
+          <h3 class="ft-title">Categories</h3>
+          <ul>
+            <li><a href="coming-soon.html" class="ft-link">Cruising</a></li>
+            <li><a href="coming-soon.html" class="ft-link">Beach Holidays</a></li>
+            <li><a href="coming-soon.html" class="ft-link">Weddings</a></li>
+          </ul>
+        </div>
+        <div class="ft-right">
+          <h3 class="ft-title">Popular Posts</h3>
+          <ol>
+            <li><a href="blog-post.html" class="ft-link">When did cruising get so cool?</a></li>
+            <li><a href="coming-soon.html" class="ft-link">Best Honeymoon Destinations</a></li>
+            <li><a href="coming-soon.html" class="ft-link">World's Top 10 Beaches</a></li>
+          </ol>
+        </div>
         <div class="ft-btm">
           <p>Design and build by Rebecca Varley &copy; 2022</p>
         </div>
