--- a/about.html
+++ b/about.html
@@ -38,6 +38,34 @@
     </div>
   </body>
   <footer class="footer">
-    <div></div>
+    <div class="ft-left">
+      <h3 class="ft-title">Categories</h3>
+      <ul>
+        <li><a href="coming-soon.html" class="ft-link">Cruising</a></li>
+        <li><a href="coming-soon.html" class="ft-link">Beach Holidays</a></li>
+        <li><a href="coming-soon.html" class="ft-link">Weddings</a></li>
+      </ul>
+    </div>
+    <div class="ft-right">
+      <h3 class="ft-title">Popular Posts</h3>
+      <ol>
+        <li>
+          <a href="blog-post.html" class="ft-link"
+            >When did cruising get so cool?</a
+          >
+        </li>
+        <li>
+          <a href="coming-soon.html" class="ft-link"
+            >Best Honeymoon Destinations</a
+          >
+        </li>
+        <li>
+          <a href="coming-soon.html" class="ft-link">World's Top 10 Beaches</a>
+        </li>
+      </ol>
+    </div>
+    <div class="ft-btm">
+      <p>Design and build by Rebecca Varley &copy; 2022</p>
+    </div>
   </footer>
 </html>
