add linkedin share

--- a/blog-post.html
+++ b/blog-post.html
@@ -63,6 +63,13 @@
               Child friendly cruises have pools and more aimed specifically at
               children
             </figcaption>
+            <p>Emma Godwin, a young mother in her thirties, describes her realisation that cruising might suit her family:
+              <blockquote>
+                "To be honest, I thought cruising was just for the elderly, but then a few of my friends who are parents started taking Disney 
+                cruises and it just progressed from there. When you have children it's just such an easy way to travel. 
+                Having said that, my niece in her twenties goees on party cruises now too, so I guess it's not just for families either."
+              </blockquote>
+            </p>
             <h2>How to find the right cruise for you?</h2>
             <p>
               When it comes to picking the right cruise, the most important
@@ -109,6 +116,7 @@
               There's nothing better than someone who knows the world of
               cruising and can help you book the trip of your dreams.
             </p>
+            <p><span class="linkedIn-share"><a href="https://www.linkedin.com/sharing/share-offsite/?url={blog-post.html}" class="share-button">Share On LinkedIn</a></span></p>
           </div>
           <aside class="author-box">
             <div class="author-bio">
