Work on footer responsiveness

--- a/blog-post.html
+++ b/blog-post.html
@@ -124,11 +124,10 @@
               data-layout="button_count" data-size="small"><a target="_blank" 
               href="https://www.facebook.com/sharer/sharer.php?u=http%3A%2F%2F127.0.0.1%3A5500%2Fblog-post.html&amp;src=sdkpreparse" 
               class="fb-xfbml-parse-ignore">Share</a></div>
+              <a href="https://twitter.com/intent/tweet?button_hashtag=LoveCruising&ref_src=twsrc%5Etfw" 
+              class="twitter-hashtag-button" 
+              data-show-count="false">Tweet #Cool Cruising</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
             </div>
-            <a class="twitter-share-button"
-                href="https://twitter.com/intent/tweet?text=Hello%20world"
-                data-size="large">
-                How cruising became cool again - http://127.0.0.1:5500/blog-post.html</a>
           </div>
           <aside class="author-box">
             <div class="author-bio">
@@ -138,7 +137,7 @@
                 class="author-img"
               />
               <div class="author-left">
-                <h5>Rebecca Varley</h5>
+                <h4>Rebecca Varley - Author - The Weekday Chimes</h4>
                 <p>
                   Rebecca Varley is an author and journalist who loves to
                   travel. She has edited several major magazines and published
