Finish styling and add comments to css

--- a/about.html
+++ b/about.html
@@ -20,6 +20,7 @@
           <img
             src="images/Rebecca_Varley_Blog.png"
             alt="Square header image with caramel background saying Rebecca Varley Blog"
+            class="header-img"
           />
         </div>
       </header>
