--- a/blog-post.html
+++ b/blog-post.html
@@ -22,6 +22,7 @@
           <img
             src="images/Rebecca_Varley_Blog.png"
             alt="Square header image with caramel background saying Rebecca Varley Blog"
+             class="header-img"
           />
         </div>
       </header>
@@ -119,14 +120,14 @@
               cruising and can help you book the trip of your dreams.
             </p>
             <div class="shares">
-              <span class="linkedIn-share"><a href="https://www.linkedin.com/sharing/share-offsite/?url={blog-post.html}" class="share-button">Share On LinkedIn</a></span>
+              <div class="linkedIn-share"><a href="https://www.linkedin.com/sharing/share-offsite/?url={blog-post.html}" class="share-button">Share On LinkedIn</a></div>
               <div class="fb-share-button" data-href="http://127.0.0.1:5500/blog-post.html" 
               data-layout="button_count" data-size="small"><a target="_blank" 
               href="https://www.facebook.com/sharer/sharer.php?u=http%3A%2F%2F127.0.0.1%3A5500%2Fblog-post.html&amp;src=sdkpreparse" 
               class="fb-xfbml-parse-ignore">Share</a></div>
-              <a href="https://twitter.com/intent/tweet?button_hashtag=LoveCruising&ref_src=twsrc%5Etfw" 
+              <div class="twitter-button"><a href="https://twitter.com/intent/tweet?button_hashtag=LoveCruising&ref_src=twsrc%5Etfw" 
               class="twitter-hashtag-button" 
-              data-show-count="false">Tweet #Cool Cruising</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+              data-show-count="false">Tweet #Cool Cruising</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script></div>
             </div>
           </div>
           <aside class="author-box">
