change figure and add bold and underline

--- a/blog-post.html
+++ b/blog-post.html
@@ -45,23 +45,24 @@
           <div class="text-section">
             <p class="first-para">
               Once the poor relation of the holiday world and loved only by
-              those of retirement age, cruising has undergone a massive image
+              those of retirement age, cruising has undergone a <b>massive</b> image
               transformation in recent years. Newer cruise lines such as Virgin
               Cruises have finally managed to rehabilitate the reputation of a
               holiday on the seas - and the idea of seeing the world, whilst
               packing once, has really taken hold.
             </p>
             <p>
-              These days, there's a cruise for everyone. Whether you are a
+              These days, there's a cruise for <u>everyone</u>. Whether you are a
               family with children seeking the thrills and spills of the slides,
               skating and movies on Royal Caribbean or a bright young thing who
               loves to party on one of the new adult only ships, there's a
               cruise you'll love.
             </p>
+            <figure class="blog-img">
             <img
               src="images/christian-lambert-id5Rj_DfPY4-unsplash.jpeg"
               alt="Image of a child friendly cruise ship showing the pools and slides"
-            />
+            /></figure>
             <figcaption>
               Child friendly cruises have pools and more aimed specifically at
               children
@@ -94,10 +95,11 @@
               lines that focus on the food and ambiance and offer a gentle
               wander around the high seas.
             </p>
+            <figure class="blog-img">
             <img
               src="images/reynier-carl-kqZH-B7IX7o-unsplash.jpeg"
               alt="Reading the paper and enjoying breakfast on a cruise ship"
-            />
+            /></figure>
             <figcaption>
               There are many cruise options for those that prefer a slower, more
               relaxing style of cruising
