update author box for responsiveness

--- a/blog-post.html
+++ b/blog-post.html
@@ -134,12 +134,13 @@
           </div>
           <aside class="author-box">
             <div class="author-bio">
+              <div class="author-left">
               <img
                 src="images/author-unsplash.jpeg"
                 alt="image of woman from unsplash"
                 class="author-img"
-              />
-              <div class="author-left">
+              /></div>
+              <div class="author-right">
                 <h4>Rebecca Varley - Author - The Weekday Chimes</h4>
                 <p>
                   Rebecca Varley is an author and journalist who loves to
